--- a/roles/webapps/tasks/tilltax.yml
+++ b/roles/webapps/tasks/tilltax.yml
@@ -1,12 +1,12 @@
 ---
-- name: pull and run tilltax-test
+- name: pull and run tilltax-web
   docker_container:
-    name: tilltax-test
+    name: tilltax-web
     image: aliencyborg/tilltax-web
     pull: true
     state: started
     restart: yes
     env:
       LETSENCRYPT_EMAIL: 'thealiencyborg@gmail.com'
-      LETSENCRYPT_HOST: 'tilltaxtest.aliencyb.org'
-      VIRTUAL_HOST: 'tilltaxtest.aliencyb.org'
+      LETSENCRYPT_HOST: 'tilltax.com,www.tilltax.com'
+      VIRTUAL_HOST: 'tilltax.com,www.tilltax.com'
