watchman on suse

--- a/roles/development-suse/tasks/main.yml
+++ b/roles/development-suse/tasks/main.yml
@@ -25,3 +25,8 @@
   become_user: "{{ username }}"
   tags:
     - node
+
+- include: watchman.yml
+  become_user: "{{ username }}"
+  tags:
+    - watchman
