--- a/roles/webserver/files/docker.conf
+++ b/roles/webserver/files/docker.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/docker daemon -s devicemapper -H fd://
+ExecStart=/usr/bin/dockerd -s devicemapper -H fd://
