--- a/roles/webserver/tasks/docker.yml
+++ b/roles/webserver/tasks/docker.yml
@@ -15,7 +15,7 @@
   with_items:
     - docker
     - docker-compose
-    - python2-docker-py
+    #- python2-docker-py
 
 - name: docker service
   service: name=docker
