--- a/roles/webapps/tasks/teeming-rails.yml
+++ b/roles/webapps/tasks/teeming-rails.yml
@@ -1,11 +1,11 @@
 ---
-- name: teeming postgres data container
+- name: teeming rails postgres data container
   docker_container:
     image: postgres:9.6
     name: teeming-rails-db-data
     state: present
 
-- name: teeming postgres
+- name: teeming rails postgres
   docker_container:
     image: postgres:9.6
     name: teeming-rails-db
@@ -13,9 +13,9 @@
     volumes_from:
       - teeming-rails-db-data
 
-- name: teeming api
+- name: teeming rails api
   docker_container:
-    env_file: teeming.env
+    env_file: teeming-rails.env
     image: aliencyborg/teeming-rails
     name: teeming-rails
     pull: true
@@ -24,6 +24,6 @@
     env:
       VIRTUAL_HOST: "members.ourrevolutionmn.com"
       LETSENCRYPT_HOST: "members.ourrevolutionmn.com"
-      LETSENCRYPT_EMAIL: "tech@ourrevolutionmn.com"
+      LETSENCRYPT_EMAIL: "thealiencyborg@gmail.com"
     links:
       - "teeming-rails-db:db"
