--- a/roles/webapps/tasks/cogo.yml
+++ b/roles/webapps/tasks/cogo.yml
@@ -10,6 +10,9 @@
     image: postgres:9.6
     name: cogo-db
     state: started
+    environment:
+      POSTGRES_USER: 'cogo'
+      POSTGRES_PASSWORD: 'yourpassword'
     exposed:
       - 5432
     volumes_from:
