--- a/roles/webapps/tasks/cogo-stage.yml
+++ b/roles/webapps/tasks/cogo-stage.yml
@@ -12,11 +12,11 @@
     state: started
     env:
       POSTGRES_USER: 'cogo'
-      POSTGRES_PASSWORD: 'yourpassword'
+      POSTGRES_PASSWORD: "{{ COGO_STAGE.POSTGRES_PASSWORD }}"
     exposed:
       - 5432
     volumes_from:
-      - cogo-db-data
+      - cogo-db-data-stage
 
 - name: cogo redis data container
   docker_container:
@@ -26,18 +26,18 @@
 
 - name: cogo redis
   docker_container:
-    command: redis-server --requirepass yourpassword
+    command: redis-server --requirepass "{{ COGO_STAGE.REDIS_PASSWORD }}"
     image: redis:3.2
     name: cogo-redis-stage
     state: started
     exposed:
       - 6379
     volumes_from:
-      - cogo-redis-data
+      - cogo-redis-data-stage
 
 - name: cogo rails
   docker_container:
-    env_file: cogo.env
+    env_file: cogo-stage.env
     image: aliencyborg/cogo-rails-stage
     name: cogo-rails-stage
     pull: true
@@ -51,33 +51,33 @@
     exposed:
       - 3000
     links:
-      - "cogo-db:postgres"
-      - "cogo-redis:redis"
+      - "cogo-db-stage:postgres"
+      - "cogo-redis-stage:redis"
 
 - name: cogo sidekiq
   docker_container:
     command: sidekiq -C config/sidekiq.yml.erb
-    env_file: cogo.env
+    env_file: cogo-stage.env
     image: aliencyborg/cogo-rails-stage
     name: cogo-sidekiq-stage
     state: started
     links:
-      - "cogo-db:postgres"
-      - "cogo-redis:redis"
+      - "cogo-db-stage:postgres"
+      - "cogo-redis-stage:redis"
     volumes_from:
       - cogo-rails-stage
 
 - name: cogo action cable
   docker_container:
     command: puma -p 28080 cable/config.ru
-    env_file: cogo.env
+    env_file: cogo-stage.env
     image: aliencyborg/cogo-rails-stage
     name: cogo-cable-stage
     state: started
     exposed:
       - 28080
     links:
-      - "cogo-redis:redis"
+      - "cogo-redis-stage:redis"
     volumes_from:
       - cogo-rails-stage
 
