--- a/roles/webapps/tasks/cogo.yml
+++ b/roles/webapps/tasks/cogo.yml
@@ -98,6 +98,7 @@
     env_file: cogo.env
     image: aliencyborg/cogo-rails
     name: cogo-sidekiq
+    restart: yes
     state: started
     networks:
       - name: cogo
