--- a/roles/webapps/tasks/main.yml
+++ b/roles/webapps/tasks/main.yml
@@ -35,6 +35,13 @@
     - bombaybreakdown
     - webapps
 
+- include: chucklove.yml
+  become: yes
+  become_user: root
+  tags:
+    - chucklove
+    - webapps
+
 - include: cogo.yml
   become: yes
   become_user: root
@@ -55,12 +62,26 @@
     - mwmoving
     - webapps
 
+- include: pics-api.yml
+  become: yes
+  become_user: root
+  tags:
+    - pics-api
+    - webapps
+
 - include: pretty-good.yml
   become: yes
   become_user: root
   tags:
     - pretty-good
     - ghost
+    - webapps
+
+- include: rosas-pics.yml
+  become: yes
+  become_user: root
+  tags:
+    - rosas-pics
     - webapps
 
 - include: sudo-science.yml
@@ -93,6 +114,12 @@
   become: yes
   become_user: root
   tags:
-    - tilltax
     - tilltax-demo
+    - webapps
+
+- include: tilltax-preview.yml
+  become: yes
+  become_user: root
+  tags:
+    - tilltax-preview
     - webapps
