--- a/roles/webapps/tasks/main.yml
+++ b/roles/webapps/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+- include: alhazen-api.yml
+  become: yes
+  become_user: root
+  tags:
+    - alhazen
+    - alhazen-api
+    - webapps
+
+- include: alhazen-web.yml
+  become: yes
+  become_user: root
+  tags:
+    - alhazen
+    - alhazen-web
+    - webapps
+
 - include: aliencyborg.yml
   become: yes
   become_user: root
@@ -63,26 +79,12 @@
     - wordpress
     - webpress
 
-- include: pics-api.yml
-  become: yes
-  become_user: root
-  tags:
-    - pics-api
-    - webapps
-
 - include: pretty-good.yml
   become: yes
   become_user: root
   tags:
     - pretty-good
     - ghost
-    - webapps
-
-- include: rosas-pics.yml
-  become: yes
-  become_user: root
-  tags:
-    - rosas-pics
     - webapps
 
 - include: sudo-science.yml
