--- a/roles/webapps/tasks/rosas-pics-web.yml
+++ b/roles/webapps/tasks/rosas-pics-web.yml
@@ -2,11 +2,11 @@
 - name: pull and run rosas-pics
   docker_container:
     name: rosas-pics
-    image: ballpointpenguin/rosas-pics
+    image: aliencyborg/rosas-pics-web:latest
     pull: true
     state: started
     restart: yes
     env:
-      LETSENCRYPT_EMAIL: 'thealiencyborg@gmail.com'
+      LETSENCRYPT_EMAIL: 'ben@aliencyb.org'
       LETSENCRYPT_HOST: 'rosas.pics,www.rosas.pics'
       VIRTUAL_HOST: 'rosas.pics,www.rosas.pics'
