--- a/host_vars/thebeast.yml
+++ b/host_vars/thebeast.yml
@@ -3,3 +3,5 @@ ansible_python_interpreter: /usr/bin/python2
 hostname: TheBeast
 username: hank
 userpasswd: $6$eEnlCIf6Ldw$mNV2U37NP2syp/I8042FaWOvS.DxcJSYRq3Zw9l8dTEBPxRx.1mQVLTB5N1vO/E40oXcGMli9pXKSksUlnIB9/
+username2: mccoy
+userpasswd2: $6$.nCHgKMZsCRbvjex$vx4r6kX4WszmEr4dkJOAwmyRXr7.DBY0oxz5EBX2jgy/HEUDGv2jjK1O9oa.EH0et4081S0YzdcGvsttHRZO70
