--- a/server/nginx-public.yml
+++ b/server/nginx-public.yml
@@ -6,13 +6,11 @@
     - docker_container:
         name: nginx-public
         image: nginx
-        state: started
-        restart: true
         ports:
           - "80:80"
           - "443:443"
         volumes:
+          - /etc/nginx/certs
           - /etc/nginx/conf.d
           - /etc/nginx/vhost.d
           - /usr/share/nginx/html
-          - /usr/local/etc/nginx/certs:/etc/nginx/certs:ro
