--- a/toofan.yml
+++ b/toofan.yml
@@ -17,4 +17,8 @@
 - import_playbook: server/nginx-letsencrypt.yml
 
   # Web Applications
+- import_playbook: webapps/aliencyborg.yml
+- import_playbook: webapps/biscuitman-down.yml
 - import_playbook: webapps/bombaybreakdown.yml
+- import_playbook: webapps/chucklove.yml
+- import_playbook: webapps/tilltax.yml
